# BotNet-Dashboard

./: Pipfile  README.md  alembic.ini  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 68d77fcd6e16_add_new_field_into_notification.py  effd0f63f431_create_new_model.py
apps/: __init__.py  routes.py
apps/base/: models.py
apps/ddos/: admin.py  models.py
apps/user/: admin.py  authentication.py  di.py  models.py  routes.py  schemas.py
apps/zombie/: admin.py  models.py  routes.py  schemas.py  utils.py
apps/zombie/services/: command_handler.py  response_process.py
config/: database.py  security.py
managers/: c2_manager.py
media/files/zombies/1/: app.py  dump.json  figma.html  spiska.txt
templates/: terminal.html
utils/: unique_generator.py
