[project]
name = "botnet-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "sqladmin>=0.25.0",
]
